Nopol supports java 17 (#234)